--- a/src/main/resources/static/style/style2.css
+++ b/src/main/resources/static/style/style2.css
@@ -129,7 +129,7 @@
 #wrap #visual_bg{
     height: 747px;
     /*background-color: aqua;*/
-    background-image: url(../img/main_img2_02.jpg);
+    background-image: url(../img/gingerbread.jpg);
     background-size:cover;
     background-repeat: no-repeat;
     background-position: center;/*중심값을기준*/  
