--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width; initial-scale=1.0"/>
-    <title>도그쿡 | dogcook</title>
+    <title>GARDENING SHOP | gardening shop</title>
     <link rel="stylesheet" th:href="@{/css/bootstrap.css}" type="text/css">
-    <!--    <link rel="stylesheet" th:href="@{/style/style1.css}" type="text/css">-->
     <link rel="stylesheet" th:href="@{/style/style2.css}" type="text/css">
     <link rel="stylesheet" th:href="@{/style/reset.css}" type="text/css">
     <script th:src="@{/scripts/scripts.js}"></script>
@@ -78,7 +77,7 @@
     <div id="visual_bg">
         <div id="visual_txt">
             <p></p>
-            <p>건강하고 맛있게 <br> <em>100%수제간식!</em></p>
+            <p>감성 플랜테리어 <br> <em>GARDENING SHOP</em></p>
         </div>
     </div>
     <!--        e:visual-->
@@ -118,7 +117,7 @@
                 <h2>PLANT PRODUCT</h2>
                 <div id="pdt">
                     <ul>
-                        <li><a href="#"><img th:src="@{/img/product/001.jpeg}" alt="소고기사료">
+                        <li><a href="#"><img th:src="@{/img/product/01.jpeg}" alt="진백나무">
                             <p><img th:src="@{/img/new.png}" alt="new">
                                 진백나무 <br>
                                 <em>13,000원</em>
@@ -126,32 +125,32 @@
 
                         </a>
                         </li>
-                        <li><a href="#"><img th:src="@{/img/product/2.jpg}" alt="베리베리 굿 껌 100g">
-                            <p><img th:src="@{/img/new.png}" alt="new">베리베리 굿 껌 100g <br>
+                        <li><a href="#"><img th:src="@{/img/product/01.jpeg}" alt="진백나무">
+                            <p><img th:src="@{/img/new.png}" alt="new">진백나무 <br>
                                 <em>5,900원</em>
                             </p>
                         </a>
                         </li>
-                        <li><a href="#"><img th:src="@{/img/product/3.jpg}" alt="쌀쭉이 껌 100g">
-                            <p>쌀쭉이 껌 100g <br>
+                        <li><a href="#"><img th:src="@{/img/product/01.jpeg}" alt="진백나무">
+                            <p>진백나무<br>
                                 <em>5,900원</em>
                             </p>
                         </a>
                         </li>
-                        <li><a href="#"><img th:src="@{/img/product/4.jpg}" alt="강냉이 칭찬볼 치즈맛 70g">
-                            <p><img th:src="@{/img/new.png}" alt="new">강냉이 칭찬볼 치즈맛 70g <br>
+                        <li><a href="#"><img th:src="@{/img/product/01.jpeg}" alt="진백나무">
+                            <p><img th:src="@{/img/new.png}" alt="new">진백나무<br>
                                 <em>5,900원</em>
                             </p>
                         </a>
                         </li>
-                        <li><a href="#"><img th:src="@{/img/product/5.jpg}" alt="오리날개뼈 껌 (4ea)">
-                            <p><img th:src="@{/img/md_icon.png}" alt="추천">오리날개뼈 껌 (4ea)<br>
+                        <li><a href="#"><img th:src="@{/img/product/01.jpeg}" alt="진백나무">
+                            <p><img th:src="@{/img/md_icon.png}" alt="추천">진백나무<br>
                                 <em>4,900원</em>
                             </p>
                         </a>
                         </li>
-                        <li><a href="#"><img th:src="@{/img/product/6.jpg}" alt="오리 울대 바삭이껌 20g">
-                            <p><img th:src="@{/img/md_icon.png}" alt="추천">오리 울대 바삭이껌 20g <br>
+                        <li><a href="#"><img th:src="@{/img/product/01.jpeg}" alt="진백나무">
+                            <p><img th:src="@{/img/md_icon.png}" alt="추천">진백나무<br>
                                 <em>5,900원</em>
                             </p>
                         </a>
