로그인 (기본)

--- a/src/main/resources/templates/itemPages/itemSave.html
+++ b/src/main/resources/templates/itemPages/itemSave.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div>
-    <form action="/item/save" method="post">
+    <form action="/item/save" method="post" class="">
         <input type="text" name="itemName" placeholder="상품명">
         <input type="text" name="itemPrice" placeholder="상품가격">
         <textarea name="itemContents" cols="30" rows="10" placeholder="상품 설명"></textarea>
