--- a/src/main/resources/templates/questionPages/questionList.html
+++ b/src/main/resources/templates/questionPages/questionList.html
@@ -1,10 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
 </head>
 <body>
+
+<div class="container" id="question-list">
+    <table class="table table-striped table-hover text-center">
+        <tr>
+            <th>번호</th>
+            <th>제목</th>
+            <th>작성자</th>
+            <th>날자</th>
+            <th>답변여부</th>
+        </tr>
+        <tr th:each="board: ${questionList}">
+            <td th:text="${board.id}"></td>
+            <td><a th:href="@{|/board/${board.id}|}" th:text="${board.questionTitle}"></a></td>
+            <td th:text="${board.questionName}"></td>
+            <td th:text="*{#temporals.format(board.getQuestionCreatedTime(), 'yyyy-MM-dd HH:mm:ss')}"></td>
+            <td th:text="${board.questionStatus}"></td>
+        </tr>
+    </table>
+</div>
 
 
 
