--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -42,6 +42,7 @@
                     </div>
 
                     <ul style="margin-left: 100px;">
+                        <li><a href="/item/save">상품등록</a></li>
                         <li><a href="#">베스트</a></li>
                         <li><a href="#">소형 식물</a></li>
                         <li><a href="#">중형 식물</a></li>
