--- a/src/main/resources/templates/itemPages/itemDetail.html
+++ b/src/main/resources/templates/itemPages/itemDetail.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="container">
-    <form action="/cart/save" method="get">
+    <form action="/cart/save" method="post">
         <table class="table table-hover table-striped mt-5">
             <tr th:if="${item.fileAttachedItem == 1}">
                 <th>파일</th>
@@ -18,6 +18,7 @@
             <tr>
                 <th>상품명</th>
                 <input type="hidden" name="id" th:value="${item.id}">
+                <input type="hidden" name="userId" th:value="${session.member.userId}">
                 <td><input type="text" name="itemName" th:value="${item.itemName}" class="form-control" readonly></td>
             </tr>
             <tr>
@@ -31,7 +32,7 @@
             <tr>
                 <th>구매수량</th>
                 <td>
-                    <input type="number" id="itemCountInput" min="1" max="100" value="1" name="oderCount" onchange="total()">
+                    <input type="number" id="itemCountInput" min="1" max="100" value="1" name="cartCount" onchange="total()">
                 </td>
             <tr>
                 <th>가격</th>
