--- a/src/main/resources/templates/itemPages/itemDetail.html
+++ b/src/main/resources/templates/itemPages/itemDetail.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <title>detail</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+    <link rel="stylesheet" th:href="@{/style/style3.css}" type="text/css">
+    <script th:src="@{/js/axios.min.js}"></script>
+<!--    시간설정-->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 </head>
 <body>
 <div class="container">
@@ -29,5 +34,109 @@
     <a href="/cart/save">장바구니</a>
     <a href="/order/save">바로구매</a>
 </div>
+<div class="container mt-5">
+    <div id="comment-write" class="input-group" mb-3>
+        <div class="form-floating">
+            <input type="text" id="commentWriter" th:value="${session.member}" class="form-control" readonly>
+            <label for="commentWriter">작성자</label>
+        </div>
+        <div class="form-floating">
+            <input type="text" id="commentContents" class="form-control" placeholder="내용">
+            <label for="commentContents">내용</label>
+        </div>
+        <div class="star-container">
+            <div class="star"></div>
+            <div class="star"></div>
+            <div class="star"></div>
+            <div class="star"></div>
+            <div class="star"></div>
+        </div>
+        <h1 class="rating">0/5</h1>
+        <script th:src="app.js"></script>
+        <button id="comment-write-btn" class="btn btn-secondary" onclick="commentWrite()">댓글작성</button>
+    </div>
+</div>
+<div class="container mt-5" id="comment-list">
+    <div th:if="${commentList == 'empty'}">
+        <p>작성된 댓글이 없습니다.</p>
+    </div>
+    <div th:unless="${commentList == 'empty'}">
+        <table class="table">
+            <tr>
+                <th>댓글번호</th>
+                <th>작성자</th>
+                <th>내용</th>
+                <th>작성시간</th>
+                <th>별점</th>
+
+            </tr>
+            <tr th:each="comment: ${commentList}">
+                <td th:text="${comment.id}"></td>
+                <td th:text="${comment.commentWriter}"></td>
+                <td th:text="${comment.commentContents}"></td>
+                <td th:text="*{#temporals.format(comment.commentCreatedDate,'yyyy-MM-dd HH:mm:ss')}"></td>
+                <td th:text="${comment.starCount}"></td>
+            </tr>
+        </table>
+    </div>
+</div>
 </body>
+<script th:inline="javascript">
+    let stars = document.querySelectorAll(".star");
+    document.querySelector(".star-container").addEventListener("click", starRating);
+    let rating = document.querySelector(".rating");
+
+    function starRating(e) {
+        stars.forEach((star) => star.classList.remove("star__checked"));
+        const i = [...stars].indexOf(e.target);
+        if (i > -1) {
+            stars[i].classList.add("star__checked");
+            rating.textContent = `${stars.length - i}/5`;
+        } else {
+            rating.textContent = `${0}/5`;
+        }
+    }
+    const commentWrite = () => {
+            const writer = document.getElementById("commentWriter").value;
+            const contents = document.getElementById("commentContents").value;
+            const id = [[${item.id}]];
+            axios({
+                method: "post",
+                url: "/comment/save",
+                data: {
+                    commentWriter: writer,
+                    commentContents: contents,
+                    itemId: id
+                }
+            }).then(res => {
+                console.log("성공");
+                console.log(res);
+                console.log(res.data);
+                const commentList = res.data;
+                console.log("commentList", commentList);
+                let output = "<table class='table'>";
+                output += "<tr><th>댓글번호</th>";
+                output += "<th>작성자</th>";
+                output += "<th>내용</th>";
+                output += "<th>작성시간</th>";
+                output += "<th>별점</th></tr>";
+                for (let i in commentList) {
+                    output += "<tr>";
+                    output += "<td>" + commentList[i].id + "</td>";
+                    output += "<td>" + commentList[i].commentWriter + "</td>";
+                    output += "<td>" + commentList[i].commentContents + "</td>";
+                    output += "<td>" + moment(commentList[i].commentCreatedDate).format("YYYY-MM-DD HH:mm:ss") + "</td>";
+                    output += "<td>" + commentList[i].starCount + "</td>";
+                    output += "</tr>";
+                }
+                output += "</table>";
+                document.getElementById('comment-list').innerHTML = output;
+                document.getElementById('commentWriter').value = '';
+                document.getElementById('commentContents').value = '';
+            }).catch(res => {
+                console.log("실패");
+            })
+        }
+
+</script>
 </html>
