--- a/src/main/resources/templates/memberPages/memberLogin.html
+++ b/src/main/resources/templates/memberPages/memberLogin.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div>
-            <input type="text" name="UserId" placeholder="아이디" id="memberId">
+            <input type="text" name="userId" placeholder="아이디" id="memberId">
             <input type="password" name="memberPassword" placeholder="비밀번호" id="pass">
             <input type="button" onclick="memberLogin()" value="로그인">
     </div>
